--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -144,6 +144,12 @@
       <li> Weapons "of Action" +2 that previously only gave +1 DEX now give an extra 1/2 APR as well.</li>
     </ul>
   </div>
+  <h4 class="subheader">Component 109: </h4>
+  <div class="section">
+    <p><strong><em>IWO: Universal Potions</em></strong></p>
+    <p>This component removes the usability restrictions from potions, since I don't understand how one's choice of profession can affect the ability to drink certain liquids.</p>
+    <p>So now you can waste a potion of Giant Strength on your mage; and you can boost your barbarian's pickpocket skills with a Potion of Thievery. Go crazy.</p>
+  </div>
   <h4 class="subheader">Component 122 (for EE 1.4+ or ToBEx): </h4>
   <div class="section">
     <p><strong><em>Weapon Proficiency Overhaul (WPO): Overall Overhaul</em></strong></p>
@@ -201,27 +207,28 @@
         &ndash; (+) = -1 melee AC bonus, -2 missile AC bonus<br />
         &ndash; (++) = may perform a shield bash once per round (1d3 damage per 5 levels and knockdown on failed save vs. Breath)<br /></p>
         <p>Two-Handed Weapon Style: now called <b>"Two-Hand Style"</b><br />
-        &ndash; (+) = +1 thac0, +1 damage, +5% crit chance<br />
+        &ndash; (+) = +1 thac0, +2 damage, +5% crit chance<br />
         &ndash; (++) = additional +1 thac0, +2 damage, and +5% crit chance<br /></p>
         <p>Two-Weapon Style: now called <b>"Dual-Wielding"</b><br />
         &ndash; ( ) = No off-hand attacks, no bonuses for dual-wielding<br />
-        &ndash; (+) = AC bonus against melee attacks as described below<br />
-        &ndash; (++) = may make an off-hand attack with thac0 equal to main-hand<br />.</p>
+        &ndash; (+) = 0 to 2 point melee AC bonus; off-hand attack with 5-point thac0 penalty<br />
+        &ndash; (++) = off-hand attack has no thac0 penalty<br />.</p>
       </div> 
-      <p>With 2 stars in dual-wielding, your main-hand and off-hand thac0 will be the same. Your thac0 will depend on the size and weight of the weapons you have equipped, as described below.</p>
-      <b>Wielding two small weapons:</b> no thac0 penalty, 2-point melee AC bonus.<br />
-      <b>Small + medium weapon:</b> 1-point thac0 penalty, 2-point AC bonus.<br />
-      <b>Small + large weapon:</b> 2-point thac0 penalty, 2-point AC bonus.<br />
-      <b>Two medium weapons:</b> 2-point thac0 penalty, 1-point AC bonus.<br />
-      <b>Large + medium weapon:</b> 4-point thac0 penalty, no AC bonus.<br />
-      <b>Two large weapons:</b> 4-point thac0 penalty, no AC bonus.</p>
-      <p><b>Small weapons:</b> dagger, short sword, ninja-to.<br />
-      <b>Medium weapons:</b> wakizashi, club, war hammmer, mace, morning star.<br />
-      <b>Large weapons:</b> long sword, scimitar, bastard sword, katana, flail, battle axe.</p>
+      <p>When dual-wielding, your main-hand thac0 will depend on the size and weight of the weapons you have equipped, as described below.</p>
+      <div class="kit_description">
+      	<p><b>&ndash; wielding two daggers:</b> 1-point thac0 penalty, 2-point melee AC bonus.<br />
+      	<b>&ndash; dagger + anything:</b> 2-point thac0 penalty, 2-point AC bonus.<br />
+      	<b>&ndash; medium + medium:</b> 2-point thac0 penalty, 1-point AC bonus.<br />
+      	<b>&ndash; large + medium:</b> 3-point thac0 penalty, no AC bonus.<br />
+      	<b>&ndash; large + large:</b> 4-point thac0 penalty, no AC bonus.<br />.</p>
+      </div> 
+      <p><b>Medium weapons are:</b> short sword, ninjato, wakizashi, club, war hammmer, mace, morning star.<br />
+      <b>Large weapons are:</b> long sword, scimitar, bastard sword, katana, flail, battle axe.</p>
       <p><b>Note:</b> bastard swords and katanas are unusually large; they cannot be equipped in the off-hand position.</p>
-      <p><b>Also note:</b> your thac0 and/or AC may briefly be incorrect when you equip two weapons and begin dual-wielding them. If your seem wrong, the first thing you should try it simply waiting a couple seconds with the game clock running. They should quickly resolve to the proper numbers.</p>
+      <p><b>Also note:</b> your thac0 and/or AC may briefly be incorrect when you equip two weapons and begin dual-wielding them. If your thac0 seems wrong, the first thing you should try it simply waiting a couple seconds with the game clock running. They should quickly resolve to the proper numbers.</p>
       <p><b>Shield bash:</b> in addition to the knockdown effect, it stuns opponents for 1 second starting at level 5; and the saving throw is at a -1 penalty for each 5 levels, up to level 20.</p>
       <p><b>Thrown daggers and darts:</b> will have their base APR reduced from 2 to 1.5, and from 3 to 2.5, respectively.  So you will need to be specialized in Fencing/SWS to get the full benefit of those items.</p>
+      <p><b>OPTION:</b> by editing Scales_of_Balance/ini/styles.ini, you can set Two-Handed Weapon Style to match Single Weapon Style (it is a single weapon, after all) in granting extra APR for specialization, instead of extra damage and crit chance.</p>
       <p><b>Compatibility:</b> this component covers the same ground as the "Dual-Wielding Changes for Light and Heavy Weapons" component of Item Revisions. You can probably use both together, but the effects will be compounded and will likely be somewhat extreme. Best to choose one or the other.</p>
   </div>
   <h4 class="subheader">Component 125 (for EE 1.4+): </h4>
@@ -925,6 +932,11 @@
 </div>
 <h2>Version History</h2>
 <div class="section">
+  <p><strong>Version 5.9.2 - April 2018</strong></p>
+  <ul>
+    <li>new universal potions component</li>
+    <li>even more refined dual-wielding</li>
+  </ul>
   <p><strong>Version 5.9 - February 2018</strong></p>
   <ul>
     <li>dynamic spell slot bonuses</li>
