--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -282,12 +282,12 @@
  </tr>
  <tr>
   <td><b>14:</b></td>
-  <td>.</td>
+  <td>-</td>
   <td>+1</td>
  </tr>
  <tr>
   <td><b>15:</b></td>
-  <td>.</td>
+  <td>-</td>
   <td>+2</td>
  </tr>
  <tr>
@@ -356,20 +356,20 @@
  <tr>
   <td><b>13:</b></td>
   <td>-1</td>
-  <td>.</td>
-  <td>.</td>
+  <td>-</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>14:</b></td>
   <td>-1</td>
   <td>+1</td>
-  <td>.</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>15:</b></td>
   <td>-2</td>
   <td>+1</td>
-  <td>.</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>16:</b></td>
@@ -436,168 +436,45 @@
 <table style= "width: 60%">
  <tr>
   <th>INTELLIGENCE</th>
-  <th>Bonus Spell Slot </th>
-  <th>Save vs. Spells </th>
+  <th>Mage: Bonus Spells</th>
+  <th>Saves vs. Spells</th>
   <th>Extra Proficiencies* </th>
  </tr>
  <tr>
   <td><b>5:</b></td>
-  <td>.</td>
-  <td>-5</td>
-  <td>.</td>
- </tr>
- <tr>
-  <td><b>6:</b></td>
-  <td>.</td>
+  <td>-</td>
   <td>-4</td>
-  <td>.</td>
- </tr>
- <tr>
-  <td><b>7:</b></td>
-  <td>.</td>
-  <td>-3</td>
-  <td>.</td>
- </tr>
- <tr>
-  <td><b>8:</b></td>
-  <td>.</td>
-  <td>-2</td>
-  <td>.</td>
- </tr>
- <tr>
-  <td><b>9:</b></td>
-  <td>.</td>
-  <td>-1</td>
-  <td>.</td>
- </tr>
- <tr>
-  <td><b>10-12:</b></td>
   <td>-</td>
-  <td>-</td>
-  <td>-</td>
- </tr>
- <tr>
-  <td><b>13:</b></td>
-  <td>1st level</td>
-  <td>.</td>
-  <td>+1, +1 per 9 levels</td>
- </tr>
- <tr>
-  <td><b>14:</b></td>
-  <td>2nd level</td>
-  <td>.</td>
-  <td>+1, +1 per 9 levels</td>
- </tr>
- <tr>
-  <td><b>15:</b></td>
-  <td>3rd level</td>
-  <td>.</td>
-  <td>+2, +1 per 7 levels</td>
- </tr>
- <tr>
-  <td><b>16:</b></td>
-  <td>4th level</td>
-  <td>+1</td>
-  <td>+2, +1 per 7 levels</td>
- </tr>
- <tr>
-  <td><b>17:</b></td>
-  <td>5th level</td>
-  <td>+1</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>18:</b></td>
-  <td>6th level</td>
-  <td>+2</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>19:</b></td>
-  <td>7th level</td>
-  <td>+2</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>20:</b></td>
-  <td>8th level</td>
-  <td>+3</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>21:</b></td>
-  <td>9th level</td>
-  <td>+3</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>22:</b></td>
-  <td>.</td>
-  <td>+4</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>23:</b></td>
-  <td>.</td>
-  <td>+4</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>24:</b></td>
-  <td>.</td>
-  <td>+5</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
- <tr>
-  <td><b>25:</b></td>
-  <td>.</td>
-  <td>+5</td>
-  <td>+3, +1 per 5 levels</td>
- </tr>
-</table>
-* <i>(Warriors only. Bards get the INT 13 bonus proficiencies if their INT is 15+, and get the INT 17 bonus proficiencies if their INT is 17+.  <b>NOTE:</b> these extra proficiencies can be turned off by editing a variable in /Scales_of_Balance/ini/stats.ini.)</i><br />
-<table style= "width: 50%">
- <tr>
-  <th>WISDOM </th>
-  <th>Bonus Spells</th>
-  <th>XP Modifier</th>
-  <th>Save vs. Polymorph</th>
- </tr>
- <tr>
-  <td><b>5:</b></td>
-  <td>.</td>
-  <td>-20%</td>
-  <td>-3</td>
  </tr>
  <tr>
   <td><b>6:</b></td>
-  <td>.</td>
-  <td>-15%</td>
-  <td>-2</td>
+  <td>-</td>
+  <td>-3</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>7:</b></td>
-  <td>.</td>
-  <td>-10%</td>
+  <td>-</td>
   <td>-2</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>8:</b></td>
-  <td>.</td>
-  <td>-6%</td>
-  <td>-1</td>
+  <td>-</td>
+  <td>-2</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>9:</b></td>
-  <td>.</td>
-  <td>-4%</td>
+  <td>-</td>
   <td>-1</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>10:</b></td>
-  <td>.</td>
-  <td>-2%</td>
-  <td>.</td>
+  <td>-</td>
+  <td>-1</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>11-12:</b></td>
@@ -608,142 +485,289 @@
  <tr>
   <td><b>13:</b></td>
   <td>1st level</td>
-  <td>+2%</td>
-  <td>.</td>
+  <td>-</td>
+  <td>+1, +1 per 9 levels</td>
+ </tr>
+ <tr>
+  <td><b>14:</b></td>
+  <td>1st level</td>
+  <td>-</td>
+  <td>+1, +1 per 9 levels</td>
+ </tr>
+ <tr>
+  <td><b>15:</b></td>
+  <td>2nd level</td>
+  <td>+1</td>
+  <td>+2, +1 per 7 levels</td>
+ </tr>
+ <tr>
+  <td><b>16:</b></td>
+  <td>2nd level</td>
+  <td>+1</td>
+  <td>+2, +1 per 7 levels</td>
+ </tr>
+ <tr>
+  <td><b>17:</b></td>
+  <td>3rd level</td>
+  <td>+2</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>18:</b></td>
+  <td>4th level</td>
+  <td>+2</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>19:</b></td>
+  <td>3rd level</td>
+  <td>+3</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>20:</b></td>
+  <td>5th level</td>
+  <td>+3</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>21:</b></td>
+  <td>4th level</td>
+  <td>+4</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>22:</b></td>
+  <td>6th level</td>
+  <td>+4</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>23:</b></td>
+  <td>5th level</td>
+  <td>+5</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>24:</b></td>
+  <td>7th level</td>
+  <td>+5</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+ <tr>
+  <td><b>25:</b></td>
+  <td>6th level</td>
+  <td>+6</td>
+  <td>+3, +1 per 5 levels</td>
+ </tr>
+</table>
+* <i>(Warriors only. Bards get the INT 13 bonus proficiencies if their INT is 15+, and get the INT 15 bonus proficiencies if their INT is 17+.  <b>NOTE:</b> these extra proficiencies can be turned off by editing a variable in /Scales_of_Balance/ini/stats.ini.)</i><br />
+<table style= "width: 50%">
+ <tr>
+  <th>WISDOM </th>
+  <th>Bonus Spells</th>
+  <th>Saves vs. Death</th>
+  <th>Saves vs. Polymorph</th>
+ </tr>
+ <tr>
+  <td><b>5:</b></td>
+  <td>-</td>
+  <td>-3</td>
+  <td>-3</td>
+ </tr>
+ <tr>
+  <td><b>6:</b></td>
+  <td>-</td>
+  <td>-3</td>
+  <td>-2</td>
+ </tr>
+ <tr>
+  <td><b>7:</b></td>
+  <td>-</td>
+  <td>-2</td>
+  <td>-2</td>
+ </tr>
+ <tr>
+  <td><b>8:</b></td>
+  <td>-</td>
+  <td>-2</td>
+  <td>-1</td>
+ </tr>
+ <tr>
+  <td><b>9:</b></td>
+  <td>-</td>
+  <td>-1</td>
+  <td>-1</td>
+ </tr>
+ <tr>
+  <td><b>10:</b></td>
+  <td>-</td>
+  <td>-1</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>11-14:</b></td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>13:</b></td>
+  <td>1st level</td>
+  <td>-</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>14:</b></td>
   <td>2nd level</td>
-  <td>+4%</td>
-  <td>.</td>
+  <td>-</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>15:</b></td>
   <td>1st level</td>
-  <td>+6%</td>
-  <td>.</td>
+  <td>-</td>
+  <td>+1</td>
  </tr>
  <tr>
   <td><b>16:</b></td>
   <td>3rd level</td>
-  <td>+8%</td>
+  <td>+1</td>
   <td>+1</td>
  </tr>
  <tr>
   <td><b>17:</b></td>
   <td>2nd level</td>
-  <td>+10%</td>
   <td>+1</td>
+  <td>+2</td>
  </tr>
  <tr>
   <td><b>18:</b></td>
   <td>4th level</td>
-  <td>+12%</td>
+  <td>+2</td>
   <td>+2</td>
  </tr>
  <tr>
   <td><b>19:</b></td>
   <td>3rd level</td>
-  <td>+14%</td>
   <td>+2</td>
+  <td>+3</td>
  </tr>
  <tr>
   <td><b>20:</b></td>
   <td>5th level</td>
-  <td>+15%</td>
+  <td>+3</td>
   <td>+3</td>
  </tr>
  <tr>
   <td><b>21:</b></td>
   <td>4th level</td>
-  <td>+16%</td>
   <td>+3</td>
+  <td>+4</td>
  </tr>
  <tr>
   <td><b>22:</b></td>
   <td>6th level</td>
-  <td>+17%</td>
+  <td>+4</td>
   <td>+4</td>
  </tr>
  <tr>
   <td><b>23:</b></td>
   <td>5th level</td>
-  <td>+18%</td>
   <td>+4</td>
+  <td>+5</td>
  </tr>
  <tr>
   <td><b>24:</b></td>
   <td>7th level</td>
-  <td>+19%</td>
+  <td>+5</td>
   <td>+5</td>
  </tr>
  <tr>
   <td><b>25:</b></td>
   <td>6th level</td>
-  <td>+20%</td>
   <td>+5</td>
+  <td>+6</td>
  </tr>
 </table>
 
 <table style= "width: 65%">
  <tr>
   <th>CHARISMA</th>
-  <th>save vs. Breath</th>
-  <th>Save vs. Wands</th>
-  <th>Save vs. Death</th>
-  <th>Save vs. Polymorph</th>
-  <th>Save vs. Spells</th>
+  <th>Bard: Bonus Spells</th>
+  <th>Sorcerer: Bonus Spells</th>
+  <th>Saves vs. Breath</th>
+  <th>Saves vs. Wands</th>
   <th>Luck Bonus </th>
+  <th>XP Bonus </th>
  </tr>
  <tr>
   <td><b>5:</b></td>
+  <td>-</td>
+  <td>-</td>
   <td>-3</td>
   <td>-3</td>
-  <td>-3</td>
-  <td>.</td>
-  <td>.</td>
-  <td>-3</td>
+  <td>-2</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>6:</b></td>
+  <td>-</td>
+  <td>-</td>
   <td>-2</td>
   <td>-2</td>
-  <td>-2</td>
-  <td>.</td>
-  <td>.</td>
-  <td>-2</td>
+  <td>-1</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>7:</b></td>
+  <td>-</td>
+  <td>-</td>
   <td>-2</td>
-  <td>-2</td>
-  <td>-2</td>
-  <td>.</td>
-  <td>.</td>
   <td>-1</td>
+  <td>-1</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>8:</b></td>
+  <td>-</td>
+  <td>-</td>
+  <td>-2</td>
   <td>-1</td>
-  <td>-1</td>
-  <td>-1</td>
-  <td>.</td>
-  <td>.</td>
-  <td>-1</td>
+  <td>-</td>
+  <td>-</td>
  </tr>
  <tr>
   <td><b>9:</b></td>
+  <td>-</td>
+  <td>-</td>
   <td>-1</td>
   <td>-1</td>
-  <td>-1</td>
-  <td>.</td>
-  <td>.</td>
-  <td>.</td>
+  <td>-</td>
+  <td>-</td>
  </tr>
  <tr>
-  <td><b>10-13:</b></td>
+  <td><b>10:</b></td>
   <td>-</td>
   <td>-</td>
+  <td>-1</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>11-12:</b></td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+ </tr>
+ <tr>
+  <td><b>13:</b></td>
+  <td>1st level</td>
+  <td>1st level</td>
   <td>-</td>
   <td>-</td>
   <td>-</td>
@@ -751,111 +775,111 @@
  </tr>
  <tr>
   <td><b>14:</b></td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>.</td>
-  <td>.</td>
-  <td>.</td>
-  <td>.</td>
+  <td>1st level</td>
+  <td>1st level</td>
+  <td>-</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+2%</td>
  </tr>
  <tr>
   <td><b>15:</b></td>
+  <td>2nd level</td>
+  <td>2nd level</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>.</td>
-  <td>.</td>
-  <td>.</td>
+  <td>-</td>
+  <td>-</td>
+  <td>+4%</td>
  </tr>
  <tr>
   <td><b>16:</b></td>
+  <td>2nd level</td>
+  <td>-</td>
   <td>+1</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>.</td>
-  <td>.</td>
+  <td>-</td>
+  <td>+6%</td>
  </tr>
  <tr>
   <td><b>17:</b></td>
+  <td>3rd level</td>
+  <td>2nd level</td>
+  <td>+2</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>.</td>
+  <td>-</td>
+  <td>+8%</td>
  </tr>
  <tr>
   <td><b>18:</b></td>
+  <td>4th level</td>
+  <td>3rd level</td>
+  <td>+2</td>
+  <td>+2</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
+  <td>+10%</td>
  </tr>
  <tr>
   <td><b>19:</b></td>
+  <td>3rd level</td>
+  <td>-</td>
+  <td>+3</td>
   <td>+2</td>
-  <td>+2</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
+  <td>+12%</td>
  </tr>
  <tr>
   <td><b>20:</b></td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
+  <td>5th level</td>
+  <td>3rd level</td>
+  <td>+3</td>
+  <td>+3</td>
   <td>+1</td>
-  <td>+1</td>
-  <td>+1</td>
+  <td>+14%</td>
  </tr>
  <tr>
   <td><b>21:</b></td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
+  <td>4th level</td>
+  <td>4th level</td>
+  <td>+4</td>
+  <td>+3</td>
   <td>+1</td>
-  <td>+1</td>
+  <td>+16%</td>
  </tr>
  <tr>
   <td><b>22:</b></td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
+  <td>6th level</td>
+  <td>-</td>
+  <td>+4</td>
+  <td>+4</td>
   <td>+1</td>
+  <td>+17%</td>
  </tr>
  <tr>
   <td><b>23:</b></td>
+  <td>5th level</td>
+  <td>4th level</td>
+  <td>+4</td>
+  <td>+4</td>
   <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
+  <td>+18%</td>
  </tr>
  <tr>
   <td><b>24:</b></td>
-  <td>+3</td>
-  <td>+3</td>
-  <td>+3</td>
+  <td>-</td>
+  <td>5th level</td>
+  <td>+5</td>
+  <td>+4</td>
   <td>+2</td>
-  <td>+2</td>
-  <td>+2</td>
+  <td>+19%</td>
  </tr>
  <tr>
   <td><b>25:</b></td>
-  <td>+3</td>
-  <td>+3</td>
-  <td>+3</td>
-  <td>+3</td>
-  <td>+3</td>
+  <td>6th level</td>
+  <td>-</td>
+  <td>+5</td>
+  <td>+5</td>
   <td>+2</td>
+  <td>+20%</td>
  </tr>
 </table>
     </div>
