--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.14 </strong><br />
+  <p><strong> Version 5.18 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -964,6 +964,12 @@
 </div>
 <h2>Version History</h2>
 <div class="section">
+  <p><strong>Version 5.14-5.18 - 2019</strong></p>
+  <ul>
+    <li>bunch of minor fixes</li>
+    <li>updates for Spell Evasion</li>
+    <li>some changes to stat bonuses</li>
+  </ul>
   <p><strong>Version 5.13 - June 2018</strong></p>
   <ul>
     <li>what happened to 5.11 and 5.12??</li>
