--- a/scales_of_balance/readme-sob.html
+++ b/scales_of_balance/readme-sob.html
@@ -11,7 +11,7 @@
 <div class="section">
   <p><strong>Author: <a href="http://forums.gibberlings3.net/index.php?showuser=6306">Duns Scotus, the SubtleDoctor</a><br />
     On the web: <a href="http://www.gibberlings3.net">Home page</a></strong> and <strong><a href="http://forums.gibberlings3.net/index.php?showtopic=26838">discussion forum</a></strong></p>
-  <p><strong> Version 5.23 </strong><br />
+  <p><strong> Version 5.28 </strong><br />
     <strong> Languages:</strong> English<br />
     <strong>Platforms: </strong>Windows, Mac OS X, Linux (...?)</p>
 </div>
@@ -918,8 +918,8 @@
       <li>Weak: 1hp/6 seconds and -3 to STR, for 5 turns (50 total damage)</li>
     </ul></p>
     <p>In general, poison damage does not stack.  But you never know, sometimes someone just has a bad reaction, so occasionally the rate of damage might be doubled if you get multiple doses.  This is rare but dangerous.</p>
-    <p>The 'Slow Poison' spell now does what it says on the tin: it SLOWS the poison, it doesn't necessarily cure it.  It will reduce the magnitude of the effects of any poison by two levels: so if you are effected by lethal poison, its effects drop to those of mild poison, and if you are affected by strong poison the effects become those of weak poison, and if you are affected by mild or weak poison the effects will be blocked completely.  However, the spell only lasts for 2 turns; after it expires, the poison will still be in your system and it will return to full strength!  You will need to apply some kind of cure again at that point, or just ride out the more serious effects.</p>
-    <p>Antidotes do the same thing as Slow Poison: they reduce the severity of the effects by two levels.  Unlike the spell, antidotes last for a full 5 turns, so they will block weak potions entirely, and weaken strong poisons for their entire course. </p>
+    <p>The 'Slow Poison' spell now does what it says on the tin: it SLOWS the poison, it doesn't necessarily cure it.  It will reduce the magnitude of the effects of any poison by two levels: so if you are effected by lethal poison, its effects drop to those of mild poison, and if you are affected by strong poison the effects become those of weak poison, and if you are affected by mild or weak poison the effects will be blocked completely.  This lasts for five turns; if you are exposed to more poison within that time, that poison will also be similarly reduced.  (But if you are exposed to poison near the end of the five turns, then the Slow Poison effect will end and the poison will suddenly become much stronger!)</p>
+    <p>Antidotes do the same thing as Slow Poison: they reduce the severity of the effects by two levels.  Like the Slow Poison spell, antidotes last for a 5 turns. </p>
     <p>The Neutralize Poison spell and the Elixir of Health potion will completely block poisons of any strength, for 6 turns. (They do not prevent any poison from affecting you; they simply block the effect of poison for their duration. If you are affected by poison 5 turns after having Neutralize Poison cast on you, then the poison will kick in 1 turn later.)</p> 
   </div>
 </div>
